dev.1.104. App name is a part of config

--- a/Server/Storage/Html/reset_password.html
+++ b/Server/Storage/Html/reset_password.html
@@ -54,14 +54,14 @@
     <h1>Reset your password</h1>
 
     <div class="border">
-        <h1>[Comett] password reset</h1>
+        <h1>[&APP_NAME] password reset</h1>
         <p style="margin-bottom: 24px">Use the following code in our app to reset your password:</p>
         <b>&CODE</b>
         <p style="margin-top: 36px">This code will expire in 15 minutes.</p>
-        <p>Thanks, <br>The Comett Team</p>
+        <p>Thanks, <br>The &APP_NAME Team</p>
     </div>
 
-    <p class="footnote">© 2024 Comett</p>
+    <p class="footnote">© 2024 &APP_NAME</p>
 
 </body>
 </html>
