--- a/Server/Storage/Html/verify_email.html
+++ b/Server/Storage/Html/verify_email.html
@@ -53,14 +53,14 @@
     <h1>Verify your email</h1>
 
     <div class="border">
-        <h1>[Comett] email verification</h1>
+        <h1>[&APP_NAME] email verification</h1>
         <p style="margin-bottom: 24px">Use the following code in our app to verify your email:</p>
         <b>&CODE</b>
         <p style="margin-top: 36px">This code will expire in 15 minutes.</p>
-        <p>Thanks, <br>The Comett Team</p>
+        <p>Thanks, <br>The &APP_NAME Team</p>
     </div>
 
-    <p class="footnote">© 2024 Comett</p>
+    <p class="footnote">© 2024 &APP_NAME</p>
 
 </body>
 </html>
